--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
         "sass-loader": "7.*",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-free": "^5.10.2",
+        "font-awesome": "^4.7.0",
+        "startbootstrap-sb-admin": "^5.1.1"
     }
 }
