--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.10.2",
-        "font-awesome": "^4.7.0",
-        "startbootstrap-sb-admin": "^5.1.1"
+        "bootstrap-material-design": "^4.1.1",
+        "bootswatch": "^4.3.1",
+        "font-awesome": "^4.7.0"
     }
 }
