--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "bootstrap": "^4.0.0",
         "cross-env": "^5.1",
         "jquery": "^3.2",
+        "jquery-sortablejs": "^1.0.1",
         "laravel-mix": "^4.0.7",
         "lodash": "^4.17.13",
         "popper.js": "^1.12",
@@ -27,6 +28,7 @@
         "@fortawesome/fontawesome-free": "^5.10.2",
         "bootstrap-material-design": "^4.1.1",
         "bootswatch": "^4.3.1",
-        "font-awesome": "^4.7.0"
+        "font-awesome": "^4.7.0",
+        "sortablejs": "^1.10.0-rc3"
     }
 }
