--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.19",
+        "axios": "^0.19.0",
         "bootstrap": "^4.0.0",
         "cross-env": "^5.1",
         "jquery": "^3.2",
@@ -29,6 +29,8 @@
         "bootstrap-material-design": "^4.1.1",
         "bootswatch": "^4.3.1",
         "font-awesome": "^4.7.0",
-        "sortablejs": "^1.10.0-rc3"
+        "sortablejs": "^1.10.0-rc3",
+        "sweetalert2": "^8.17.6",
+        "vform": "^1.0.1"
     }
 }
