--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "bootstrap-material-design": "^4.1.1",
         "bootswatch": "^4.3.1",
         "font-awesome": "^4.7.0",
+        "object-to-formdata": "^2.1.2",
         "sortablejs": "^1.10.0-rc3",
         "sweetalert2": "^8.17.6",
         "vform": "^1.0.1"
